Fix: edited Register after fixing api connectivity issues (moved to work with fetch intead of axios )